# Mini-Tools

AI_Chat_Sort/: CMakeLists.txt  dialogformatter.cpp  dialogformatter.h  dialogformatter.ui  main.cpp
Crisps_Arith/: CMakeLists.txt  arithsettings.cpp  arithsettings.h  arithsettings.ui  arithwidget.cpp  arithwidget.h  arithwidget.ui  main.cpp  mainwindow.cpp  mainwindow.ui  res.qrc  resource.rc
Mini-Tools/: CMakeLists.txt  arithmeticwidget.cpp  arithmeticwidget.h  arithmeticwidget.ui  blackjackwidget.cpp  blackjackwidget.h  blackjackwidget.ui  breakoutwidget.cpp  breakoutwidget.h  breakoutwidget.ui  chatformatwidget.cpp  chatformatwidget.h  chatformatwidget.ui  config.ini  core.cpp  core.h  core.ui  cprlib.cpp  cprlib.h  deploywidget.cpp  deploywidget.h  deploywidget.ui  main.cpp  resource.aps  tictactoewidget.cpp  tictactoewidget.h  tictactoewidget.ui  translationwidget.cpp  translationwidget.h  translationwidget.ui
Release_Creator/: README.md  widget.cpp  widget.h  widget.ui
